# pyversor

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  cga.ipynb  draw.ipynb  ega.ipynb  ga.ipynb  gui.ipynb  pickle.ipynb  setup.cfg  setup.py
conda.recipe/: meta.yaml
include/pyversor/: construct.h  directions.h  flats.h  generate.h  multivectors.h  operate.h  products.h  pyversor.h  round.h  rounds.h  tangents.h  types.h  versors.h
include/pyversor/c2d/: c2d.h
notebooks/: cppgen.ipynb
pyversor/: __init__.py
pyversor/c2d/: __init__.py
pyversor/c3d/: __init__.py  construct.py  directions.py  flats.py  generate.py  operate.py  rounds.py  tangents.py  versors.py
pyversor/cga/: __init__.py
pyversor/e3d/: __init__.py
pyversor/e41/: __init__.py
pyversor/ega/: __init__.py
pyversor/sta/: __init__.py
pyversor/visuals/: gui.py
src/: construct.cpp  directions.cpp  flats.cpp  generate.cpp  multivectors.cpp  operate.cpp  pyversor.cpp  pyversor_cga.cpp  pyversor_ega.cpp  round.cpp  rounds.cpp  tangents.cpp  versor_bivector_pybind11.cpp  versor_circle_pybind11.cpp  versor_conformal_geometric_algebra_pybind11.cpp  versor_dual_line_pybind11.cpp  versor_dual_plane_pybind11.cpp  versor_euclidean_geometric_algebra_pybind11.cpp  versor_line_pybind11.cpp  versor_motor_pybind11.cpp  versor_plane_pybind11.cpp  versor_point_pair_pybind11.cpp  versor_point_pybind11.cpp  versor_pybind11.cpp  versor_rotor_pybind11.cpp  versor_sphere_pybind11.cpp  versor_translator_pybind11.cpp  versor_vector_pybind11.cpp  versors.cpp  vsr_cga3D_op.cpp  vsr_cga3D_round.cpp
src/c2d/: c2d.cpp
src/c3d/: c3d.cpp  construct.cpp  directions.cpp  flats.cpp  generate.cpp  multivectors.cpp  operate.cpp  rounds.cpp  tangents.cpp  versors.cpp  vsr_cga3D_op.cpp
src/e3d/: e3d.cpp
src/e41/: e41.cpp
src/sta/: sta.cpp
tests/: test.py  test_visuals.py
(+43 files in other folders)
